add jest snapchot test

--- a/index.template.ejs
+++ b/index.template.ejs
@@ -8,6 +8,7 @@
     <meta name="author" content="">
     <title>App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.min.css" >
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= htmlWebpackPlugin.options.googleApiKey %>&libraries=places"></script>
 </head>
 
 <body>
